--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,8 @@ github_username:  jekyll
 
 # Build settings
 # theme: minima
-theme: bulma-clean-theme
+#theme: bulma-clean-theme
+
 plugins:
   - jekyll-feed
   - jekyll-sitemap
